src/test/ui/issues/issue-22684.stderr
error[E0308]: mismatched types
  --> $DIR/issue-22684.rs:17:17
   |
LL |     let _: () = foo::Foo.bar();
   |                 ^^^^^^^^^^^^^^ expected (), found bool
   |
   = note: expected type `()`
              found type `bool`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
